package server

import (

	// "io"
	"log"

	"github.com/fleetflow/backend/internal/services"
	pb "github.com/fleetflow/backend/proto/gen"
	// "google.golang.org/grpc/codes"
	// "google.golang.org/grpc/status"
)

// UploadServer implements the UploadService gRPC service
type UploadServer struct {
	pb.UnimplementedUploadServiceServer
	services *services.Container
}

// NewUploadServer creates a new UploadServer
func NewUploadServer(services *services.Container) *UploadServer {
	return &UploadServer{
		services: services,
	}
}

// UploadFuelReceipt handles fuel receipt upload streaming
func (s *UploadServer) UploadFuelReceipt(stream pb.UploadService_UploadFuelReceiptServer) error {
	log.Printf("ðŸ“¤ UploadFuelReceipt stream started")

	// TODO: Implement when protobuf definitions are updated
	log.Printf("ðŸ“‹ UploadFuelReceipt - mock implementation")

	// TODO: Upload file via service when UploadFile method is implemented
	log.Printf("âœ… Mock fuel receipt upload completed")

	// Send mock response
	return stream.SendAndClose(&pb.UploadResponse{
		Success: true,
		Message: "Fuel receipt uploaded successfully (mock)",
	})
}

// UploadPOD handles POD upload streaming
func (s *UploadServer) UploadPOD(stream pb.UploadService_UploadPODServer) error {
	log.Printf("ðŸ“¤ UploadPOD stream started")

	// TODO: Implement when protobuf definitions are updated
	log.Printf("ðŸ“‹ UploadPOD - mock implementation")

	// Send mock response
	return stream.SendAndClose(&pb.UploadResponse{
		Success: true,
		Message: "POD uploaded successfully (mock)",
	})
}

// UploadDocument handles document upload streaming
func (s *UploadServer) UploadDocument(stream pb.UploadService_UploadDocumentServer) error {
	log.Printf("ðŸ“¤ UploadDocument stream started")

	// TODO: Implement when protobuf definitions are updated
	log.Printf("ðŸ“‹ UploadDocument - mock implementation")

	// Send mock response
	return stream.SendAndClose(&pb.UploadResponse{
		Success: true,
		Message: "Document uploaded successfully (mock)",
	})
}

// StreamUploadProgress streams upload progress
func (s *UploadServer) StreamUploadProgress(req *pb.StreamUploadProgressRequest, stream pb.UploadService_StreamUploadProgressServer) error {
	log.Printf("ðŸ“¤ StreamUploadProgress request")

	// TODO: Implement when protobuf definitions and service methods are updated
	log.Printf("ðŸ“‹ StreamUploadProgress - mock implementation")

	return nil
}

// StreamOCRResults streams OCR results
func (s *UploadServer) StreamOCRResults(req *pb.StreamOCRResultsRequest, stream pb.UploadService_StreamOCRResultsServer) error {
	log.Printf("ðŸ“¤ StreamOCRResults request")

	// TODO: Implement when protobuf definitions and service methods are updated
	log.Printf("ðŸ“‹ StreamOCRResults - mock implementation")

	return nil
}

// Helper functions

/*
func convertUploadToProto(upload *models.Upload) *pb.Upload {
...
}
*/

/*
// Convert file type to upload type
func convertFileTypeToUploadType(fileType string) pb.UploadType {
...
}
*/

/*
// Convert upload status
func convertUploadStatus(status string) pb.UploadStatus {
...
}
*/

/*
// Get MIME type from filename
func getMimeType(filename string) string {
...
}
*/
